samples/_failures_safe/1761262345_905745_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55071f50.c: In function ‘main’:
./samples/SAFE/__tmp_55071f50.c:156:24: error: missing terminating " character
  156 |                 printf("No valid transition for
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_55071f50.c:156:17: error: expected expression at end of input
  156 |                 printf("No valid transition for
      |                 ^~~~~~
./samples/SAFE/__tmp_55071f50.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55071f50.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55071f50.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55071f50.c:156:17: error: expected declaration or statement at end of input
